--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<title> Intellipaat </title>
+<title> IoTumakant </title>
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello world!</h2>
 <h2 ALIGN=CENTER>This is Umakant Kumar</h2>
+<h2 ALIGN=CENTER>Working on Jenkins CI/CD</h2>
 </body>
 </html>
