--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <title> IoTumakant </title>
 </head>
-<body style = "background-image:url('images/github3.jpg'); background-size: 100%">
+<body style = "background-image:url('images/IMG_20170501_140623.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello world!</h2>
 <h2 ALIGN=CENTER>This is Umakant Kumar as devloper</h2>
 </body>
