--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello world!</h2>
 <h2 ALIGN=CENTER>This is Umakant Kumar as master</h2>
-<h2 ALIGN=CENTER>This is practice for DevOps</h2>
+<h2 ALIGN=CENTER>This is practice for DevOps Jenkins Pipeline</h2>
 </body>
 </html>
