--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body style = "background-image:url('images/github3.jpg'); background-size: 100%">
 <h2 ALIGN=CENTER>Hello world!</h2>
-<h2 ALIGN=CENTER>This is Raju Kumar as devloper</h2>
+<h2 ALIGN=CENTER>This is Umakant Kumar as devloper</h2>
 <h2 ALIGN=CENTER>Practicing DevOps and Jenkins</h2>
 </body>
 </html>
